# ML-Final

./: .gitignore  AGENTS.md  ARCHITECTURE.md  DATA_INVESTIGATION.md  DATA_LOADING.md  DECISIONS.md  DECISIONS.typ  EVALUATION_RESULTS.md  GETTING_STARTED.md  IMPLEMENTATION_CONTRACT.md  NOTEBOOK_RUN.md  NOTEBOOK_RUN_CLEAN.py  PIPELINE.md  PLAN.md  PREPROCESSING_STRATEGY.md  PROJECT_STRUCTURE.md  README.md  REPRODUCIBILITY.md  SCRIPT_TEMPLATES.md  TRAINING_LOG.md  VISUALIZATIONS.md  main.py  pyproject.toml  report.typ  requirements.txt
models/: evaluation_summary.json  fair_benchmark_summary.json  lstm_training_summary.json  xgb_quantile_no2_h12_q05.json  xgb_quantile_no2_h12_q95.json  xgb_quantile_no2_h12_q99.json  xgb_quantile_no2_h168_q05.json  xgb_quantile_no2_h168_q95.json  xgb_quantile_no2_h168_q99.json  xgb_quantile_no2_h1_q05.json  xgb_quantile_no2_h1_q95.json  xgb_quantile_no2_h1_q99.json  xgb_quantile_no2_h24_q05.json  xgb_quantile_no2_h24_q95.json  xgb_quantile_no2_h24_q99.json  xgb_quantile_no2_h672_q05.json  xgb_quantile_no2_h672_q95.json  xgb_quantile_no2_h672_q99.json  xgb_quantile_o3_h12_q05.json  xgb_quantile_o3_h12_q95.json  xgb_quantile_o3_h12_q99.json  xgb_quantile_o3_h168_q05.json  xgb_quantile_o3_h168_q95.json  xgb_quantile_o3_h168_q99.json  xgb_quantile_o3_h1_q05.json  xgb_quantile_o3_h1_q95.json  xgb_quantile_o3_h1_q99.json  xgb_quantile_o3_h24_q05.json  xgb_quantile_o3_h24_q95.json  xgb_quantile_o3_h24_q99.json  xgb_quantile_o3_h672_q05.json  xgb_quantile_o3_h672_q95.json  xgb_quantile_o3_h672_q99.json  xgb_quantile_pm10_h12_q05.json  (+31 more)
(+19 files in other folders)
